--- a/css/print.css
+++ b/css/print.css
@@ -178,12 +178,12 @@
 /*.accordion-group .accordion-body.collapse {
         height: auto;
     }*/
-  h1, h2, {
+  h1, h2 {
     page-break-before: always;
   }
-  h3 {
+  /* h3 {
     page-break-after:
-  }
+  } */
   .panel {
     page-break-inside: avoid;
   }
@@ -205,14 +205,14 @@
   div:first-line,
   blockquote:first-line,
   li:first-line {
-      background: transparent !important;
-      color: #000 !important;
+      /* background: transparent !important; */
+      /* color: #000 !important; */
       box-shadow: none !important;
       text-shadow: none !important;
   }
-  body > *:not(.fundo-tecnicos) {
+  /* body > *:not(.fundo-tecnicos) {
     display: none;
-  }
+  } */
 
   .fundo-tecnicos[data-titulo]::before {
       content: attr(data-titulo);
@@ -274,7 +274,7 @@
   }
   .modal.fade .modal-dialog .modal-content {
     box-shadow: unset;
-    border: ;
+    /* border: ; */
     border-radius: 0px;
     background: none;
   }
@@ -369,5 +369,137 @@
     background-color: none;
 
   }
+  #modal-id {
+    display: none;
+  }
+  .col-lg-3 {
+    width: 19%;
+  }
+  .tabela {
+    display: flex;
+  }
+  .cabecalho {
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    padding: 0 30px !important;
+    height: 88px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .btn-informacao {
+    display: none;
+  }
+  .cabecalho.claro {
+    background: #497E96 !important;
+  }
+  .cabecalho.escuro {
+    background: #38627E !important;
+  }
+  
+  
+  .mapa{
+    width: 1080px;
+    height: 600px;
+    margin:50px auto;
+    position: relative;
+}
 
+.area1{
+    width: 358px;
+    height: 156px;
+    background: url(../images/banheiro.png) no-repeat;
+    position: absolute;
+    background-size: contain;
+    top: 72px;
+    cursor: pointer;
+    left: 48px;
+    padding: 73px 27px;
+}
+.area1:hover{
+    background: url(../images/banheiro.png) no-repeat #E6E7E8;
+    background-size: contain;
+}
+.area2{
+    width: 402px;
+    height: 235px;
+    background: url(../images/administrativo.png) no-repeat;
+    position: absolute;
+    background-size: contain;
+    bottom: 138px;
+    cursor: pointer;
+    padding-left: 30px;
+    padding-top: 15px;
+}
+.area2:hover{
+    background: url(../images/administrativo.png) no-repeat #E6E7E8;
+    background-size: contain;
+}
+.area3{
+    width: 317px;
+    height: 467px;
+    background: url(../images/corte.png) no-repeat;
+    position: absolute;
+    background-size: contain;
+    bottom: 138px;
+    cursor: pointer;
+    left: 398px;
+    padding-top: 150px;
+    padding-left: 15px;
+}
+.area3:hover{
+    background: url(../images/corte.png) no-repeat #E6E7E8;
+    background-size: contain;
+}
+.area4{
+    width: 308px;
+    height: 241px;
+    background: url(../images/pintura.png) no-repeat;
+    position: absolute;
+    background-size: contain;
+    top: -5px;
+    cursor: pointer;
+    right: 62px;
+    padding-top: 13px;
+    padding-left: 12px;
+}
+.area4:hover{
+    background: url(../images/pintura.png) no-repeat #E6E7E8;
+    background-size: contain;
+}
+.area5{
+    width: 308px;
+    height: 227px;
+    background: url(../images/soldagem.png) no-repeat;
+    position: absolute;
+    background-size: contain;
+    cursor: pointer;
+    top: 235px;
+    right: 62px;
+    padding-top: 13px;
+    padding-left: 12px;
+}
+.area5:hover{
+    background: url(../images/soldagem.png) no-repeat #E6E7E8;
+    background-size: contain;
+}
+.area6{
+    width: 404px;
+    height: 133px;
+    background: url(../images/almoxarifado.png) no-repeat;
+    position: absolute;
+    background-size: contain;
+    bottom: 9px;
+    cursor: pointer;
+    right: 62px;
+    padding-left: 33px;
+    padding-top: 50px;
+}
+.area6:hover{
+    background: url(../images/almoxarifado.png) no-repeat #E6E7E8;
+    background-size: contain;
+}
 }
